--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -35,6 +35,14 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2021/07/10</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>サイトのパフォーマンスを改善</li>
+        <li>設定画面でタブが1行で表示されない問題を解消</li>
+        <li>レイアウトを調整</li>
+      </ul>
+    </dd>
     <dt><time>2021/07/09</time></dt>
     <dd>
       <ul class="ml">
@@ -51,7 +59,7 @@
     <dt><time>2021/05/17</time></dt>
     <dd>
       <ul class="ml">
-        <li>投稿制限のリセット時刻のタイムゾーンがズレていた問題を解消</li>
+        <li>投稿制限のリセット時刻のタイムゾーンがズレている問題を解消</li>
       </ul>
     </dd>
     <dt><time>2021/05/16</time></dt>
@@ -69,13 +77,13 @@
     <dt><time>2021/01/02</time></dt>
     <dd>
       <ul class="ml">
-        <li>「いいねした歌」が開けなかった問題を解消</li>
+        <li>「いいねした歌」が開けない問題を解消</li>
       </ul>
     </dd>
     <dt><time>2020/12/28</time></dt>
     <dd>
       <ul class="ml">
-        <li>いいねした歌人の一覧画面が開けなかった問題を解消</li>
+        <li>いいねした歌人の一覧画面が開けない問題を解消</li>
         <li>レイアウトを調整</li>
       </ul>
     </dd>
@@ -359,7 +367,7 @@
     <dt><time>2018/11/24</time></dt>
     <dd>
       <ul class="ml">
-        <li>投稿プレビューにルビタグのHTML属性が反映されていた問題を解消</li>
+        <li>投稿プレビューにルビタグのHTML属性が反映される問題を解消</li>
       </ul>
     </dd>
     <dt><time>2018/11/23</time></dt>
@@ -384,7 +392,7 @@
     <dt><time>2018/11/19</time></dt>
     <dd>
       <ul class="ml">
-        <li>投稿フォームのプレビューで任意のHTMLタグ装飾が可能だった問題を解消</li>
+        <li>投稿フォームのプレビューで任意のHTMLタグ装飾ができてしまう問題を解消</li>
       </ul>
     </dd>
     <dt><time>2018/11/18</time></dt>
@@ -458,7 +466,7 @@
     <dt><time>2018/06/26</time></dt>
     <dd>
       <ul class="ml">
-        <li>ルビ以外の装飾が一部可能となっていた問題を解消</li>
+        <li>ルビ以外の装飾が一部できてしまう問題を解消</li>
         <li>「サイトのご案内」に情報を追加</li>
       </ul>
     </dd>
