--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -1,5 +1,5 @@
 <% @title = '利用規約' %>
-<% @description = '短歌投稿サイトUtakataの利用規約。' %>
+<% @description = '短歌投稿サイトUtakataの利用規約です。' %>
 
 <div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">利用規約</h4>
@@ -28,6 +28,7 @@
   <h5 class="mt-4">関連リンク</h5>
   <ul class="ml">
     <li><%= link_to 'サイトのご案内', infos_path %></li>
+    <li><%= link_to '寄付のお願い', donations_path %></li>
     <li><%= link_to 'プライバシーポリシー', privacy_index_path %></li>
   </ul>
 </div>
