--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -5,7 +5,8 @@
   <h4 class="mt-4">サイトのご案内</h4>
   <h5 class="mt-4">Utakataとは？</h5>
   <p>短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。全機能を無料でご利用いただけます。</p>
-  <p><a href="https://fuyu.hatenablog.com/entry/2018/06/24/233652" target="_blank">開発の背景を紹介するブログ</a>を書きました。</p>
+  <h5 class="mt-4">寄付のお願い</h5>
+  <p><a href="https://buy.stripe.com/cN25meehQb2jaQgaEE" target="_blank">こちらの寄付画面</a>から500円単位で数量を指定してUtakataに寄付いただけます。寄付のお願いについて詳しくは<%= link_to 'こちら', donations_path %>のページに記載しています。</p>
   <h5 class="mt-4">利用規約・プライバシーポリシー</h5>
   <ul class="ml">
     <li><%= link_to '利用規約', terms_path %></li>
@@ -27,17 +28,18 @@
   <h5 class="mt-4">左上のUtakataロゴをタップすると…</h5>
   <p>新着短歌の一覧が表示されます。</p>
   <h4 class="mt-4">連絡先</h4>
-  <p>不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
+  <p class="mt-3">不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
   <ul class="ml">
     <li>Email：<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a></li>
     <li>Twitter：<a href="https://twitter.com/utakatanka" target="_blank">@utakatanka</a></li>
     <li>管理人のTwitter：<a href="https://twitter.com/fuyu77" target="_blank">@fuyu77</a></li>
   </ul>
   <h4 class="mt-4">更新履歴</h4>
-  <dl>
+  <dl class="mt-3">
     <dt><time>2021/07/10</time></dt>
     <dd>
       <ul class="ml">
+        <li>Utakataに寄付する機能を追加</li>
         <li>サイトのパフォーマンスを改善</li>
         <li>設定画面でタブが1行で表示されない問題を解消</li>
         <li>レイアウトを調整</li>
