--- a/app/views/privacy/index.html.erb
+++ b/app/views/privacy/index.html.erb
@@ -1,13 +1,15 @@
 <% @title = 'プライバシーポリシー' %>
-<% @description = '短歌投稿サイトUtakataのプライバシーポリシー。' %>
+<% @description = '短歌投稿サイトUtakataのプライバシーポリシーです。' %>
 
 <div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">プライバシーポリシー</h4>
-  <p>Utakata管理者は、サービスにおける利用者の情報を下記のように扱います。本プライバシーポリシーは、予告なく改定されることがあります。</p>
+  <p class="mt-3">Utakata管理者（以下管理者）は、サービスにおける利用者の情報を下記のように扱います。本プライバシーポリシーは、予告なく改定されることがあります。</p>
   <h5 class="mt-4">メールアドレス</h5>
   <p>メールアドレスは公開されません。メールアドレスはサービス内で保存され、利用されます。</p>
   <h5 class="mt-4">パスワード</h5>
   <p>メールアドレス認証の場合、登録されたパスワードはハッシュ化された後に保存され、ログイン時に利用されます。ハッシュ化は不可逆なアルゴリズムのため、実際のパスワードの文字列については、管理者も確認できない仕組みになっています。</p>
+  <h5 class="mt-4">決済情報</h5>
+  <p>寄付機能に用いる決済情報は決済代行サービスStripeによって管理され、管理者にクレジットカード等の情報が共有されることはありません。</p>
   <h5 class="mt-4">情報の削除</h5>
   <p>画面上の操作で削除された情報は、内部的にも削除され、以後保存されません。アカウントを削除した場合は、投稿短歌を含むすべての関連情報が削除されます。</p>
   <h5 class="mt-4">Cookie</h5>
@@ -23,6 +25,7 @@
   <h5 class="mt-4">関連リンク</h5>
   <ul class="ml">
     <li><%= link_to 'サイトのご案内', infos_path %></li>
+    <li><%= link_to '寄付のお願い', donations_path %></li>
     <li><%= link_to '利用規約', terms_path %></li>
   </ul>
 </div>
