--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,5 +1,5 @@
 <% @title = '寄付のお願い' %>
-<% @description = '短歌投稿サイトUtakataへの寄付をお願いします。' %>
+<% @description = 'Utakataへの寄付をお願いします。' %>
 
 <div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">寄付のお願い</h4>
