--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -1,5 +1,5 @@
 <% @title = 'サイトのご案内' %>
-<% @description = '短歌投稿サイトUtakataの概要・使い方・連絡先・更新履歴など。' %>
+<% @description = 'Utakataの概要・使い方・連絡先・更新履歴など。' %>
 
 <div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">サイトのご案内</h4>
