--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <% @title = '新規アカウント登録' %>
-<% @description = '短歌投稿サイトUtakataのアカウント登録を行えます。' %>
+<% @description = 'Utakataのアカウント登録を行えます。' %>
 
 <div class="col-11 col-lg-5 mx-auto">
   <h5 class="mt-4 form-group">Twitterアカウントで登録する</h5>
