--- a/app/views/privacy/index.html.erb
+++ b/app/views/privacy/index.html.erb
@@ -1,5 +1,5 @@
 <% @title = 'プライバシーポリシー' %>
-<% @description = '短歌投稿サイトUtakataのプライバシーポリシーです。' %>
+<% @description = 'Utakataのプライバシーポリシーです。' %>
 
 <div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">プライバシーポリシー</h4>
