--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -4,7 +4,7 @@
 <div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">寄付のお願い</h4>
   <h5 class="mt-4">はじめに</h5>
-  <p>Utakataは全機能を無料で、サイト内広告の掲載もなくご利用いただけます。その一方で、サーバー代やドメインの維持費等で毎月平均して約2000円の費用が発生している事情があります。</p>
+  <p>Utakataは全機能を無料で、サイト内広告の掲載もなくご利用いただけます。その一方で、サーバー代やドメイン代等で毎月平均して約2000円の費用が発生している事情があります。</p>
   <p>Utakataのサービスの継続運用と管理人の開発モチベーションの維持のため、寄付のご協力をお願いしたいです。</p>
   <h5 class="mt-4">寄付の方法</h5>
   <p><a href="https://buy.stripe.com/cN25meehQb2jaQgaEE" target="_blank">こちらの寄付画面</a>から500円単位で数量を指定して寄付いただけます。寄付はいつでも何度でも可能です。</p>
