--- a/app/views/favorites/_favorites.html.erb
+++ b/app/views/favorites/_favorites.html.erb
@@ -1,19 +1,17 @@
-<% if current_user.following?(post) %>
-  <span id="<%= "like#{post.id}" %>">
-    <%= link_to content_tag(:i, '', class: "#{size} fas fa-heart"), favorite_path(id: post.id, size: size), method: :delete, remote: true %><!--
-    --><% if size == 'sm' %><!--
-      --><span class="<%= size %> like"><%= post.followings.length %></span><!--
-    --><% elsif size == 'lg' %><!--
-      --><%= link_to @post.followings.length, followers_post_path(id: @post.id), method: :get, class: "#{size} like" %>
-    <% end %>
-  </span>
-<% else %>
-  <span id="<%= "like#{post.id}" %>">
-    <%= link_to content_tag(:i, '', class: "#{size} far fa-heart"), favorites_path(follow: post.id, size: size), method: :post, remote: true, id: "like#{post.id}" %><!--
-    --><% if size == 'sm' %><!--
-      --><span class="<%= size %> like"><%= post.followings.length %></span><!--
-    --><% elsif size == 'lg' %><!--
-      --><%= link_to @post.followings.length, followers_post_path(id: @post.id), method: :get, class: "#{size} like" %>
-    <% end %>
-  </span>
-<% end %>
+<span id="<%= "like#{post.id}" -%>">
+  <%- if current_user.following?(post) -%>
+    <%= link_to content_tag(:i, '', class: "#{size} fas fa-heart"), favorite_path(id: post.id, size: size), method: :delete, remote: true -%>
+    <%- if size == 'sm' -%>
+      <span class="<%= size -%> like"><%= post.followings.length -%></span>
+    <%- elsif size == 'lg' -%>
+      <%= link_to @post.followings.length, followers_post_path(id: @post.id), method: :get, class: "#{size} like" -%>
+    <%- end -%>
+  <%- else -%>
+    <%= link_to content_tag(:i, '', class: "#{size} far fa-heart"), favorites_path(follow: post.id, size: size), method: :post, remote: true -%>
+    <%- if size == 'sm' -%>
+      <span class="<%= size -%> like"><%= post.followings.length -%></span>
+    <%- elsif size == 'lg' -%>
+      <%= link_to @post.followings.length, followers_post_path(id: @post.id), method: :get, class: "#{size} like" -%>
+    <%- end -%>
+  <%- end -%>
+</span>
