--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,7 +39,7 @@
     <dt><time>2021/10/03</time></dt>
     <dd>
       <ul class="ml">
-        <li>フォローボタンの文言を調整</li>
+        <li>レイアウトを調整</li>
       </ul>
     </dd>
     <dt><time>2021/07/10</time></dt>
