文言の調整

--- a/app/views/privacy/index.html.erb
+++ b/app/views/privacy/index.html.erb
@@ -9,7 +9,7 @@
   <h5 class="mt-4">パスワード</h5>
   <p>メールアドレス認証の場合、登録されたパスワードはハッシュ化された後に保存され、ログイン時に利用されます。ハッシュ化は不可逆なアルゴリズムのため、実際のパスワードの文字列については、管理者も確認できない仕組みになっています。</p>
   <h5 class="mt-4">決済情報</h5>
-  <p>寄付機能に用いる決済情報は決済代行サービスStripeによって管理され、管理者にクレジットカード等の情報が共有されることはありません。</p>
+  <p>寄付機能に用いる決済情報は決済代行サービスStripeによって管理され、管理者にクレジットカード番号等の情報が共有されることはありません。</p>
   <h5 class="mt-4">情報の削除</h5>
   <p>画面上の操作で削除された情報は、内部的にも削除され、以後保存されません。アカウントを削除した場合は、投稿短歌を含むすべての関連情報が削除されます。</p>
   <h5 class="mt-4">Cookie</h5>
