--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,7 @@
     <dt><time>2021/10/30</time></dt>
     <dd>
       <ul class="ml">
+        <li>アイコン（いいねのハート、通知のベルなど）を変更</li>
         <li>いいねが重複し得る問題を解消</li>
       </ul>
     </dd>
