--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
   <%- resource_class.omniauth_providers.each do |provider| %>
     <div class="form-group actions">
       <%= link_to omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary', method: :post do %>
-        <i class="fab fa-twitter text-white"></i> 登録する
+        <i class="bi bi-twitter text-white"></i> 登録する
       <% end %>
     </div>
   <% end -%>
