--- a/app/views/layouts/_posts.html.erb
+++ b/app/views/layouts/_posts.html.erb
@@ -4,7 +4,7 @@
     <% if user_signed_in? && current_user.id != post.user_id %>
       <%= render 'favorites/favorites', post: post, size: 'sm' %>
     <% else %>
-      <i class="sm fas fa-heart"></i><!--
+      <i class="sm bi bi-suit-heart-fill"></i><!--
       --><span class="sm like"><%= post.followings.length %></span>
     <% end %>
     <%= link_to (image_tag post.user.avatar.url(:small), class: 'rounded'), user_path(id: post.user_id), method: :get, class: 'd-inline-block mb-3' %>
