--- a/app/views/posts/my_search.html.erb
+++ b/app/views/posts/my_search.html.erb
@@ -16,7 +16,7 @@
   <% @posts.each do |post| %>
     <p>
       <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
-      <i class="sm fas fa-heart"></i><span class="sm like mb-3"><%= post.followings.length %></span>
+      <i class="sm bi bi-suit-heart-fill"></i><span class="sm like mb-3"><%= post.followings.length %></span>
     </p>
   <% end %>
   <%= paginate @posts %>
