--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     <%= image_tag @user.avatar.url(:original), class: 'rounded' %>&nbsp;
     <span class="lg align-middle"><%= @user.name %></span>&nbsp;
     <% if @user.twitter_id.present? %>
-      <a href="<%= 'https://twitter.com/' + @user.twitter_id %>" target="_blank"><i class="align-middle lg fab fa-twitter"></i></a>&nbsp;
+      <a href="<%= 'https://twitter.com/' + @user.twitter_id %>" target="_blank"><i class="align-middle lg bi bi-twitter"></i></a>&nbsp;
     <% end %>
     <% if user_signed_in? && current_user != @user %>
       <% if current_user.following?(@user) %>
@@ -36,7 +36,7 @@
         <% if user_signed_in? && current_user.id != post.user_id %>
           <span class="mb-3"><%= render 'favorites/favorites', post: post, size: 'sm' %></span>
         <% else %>
-          <i class="sm fas fa-heart"></i><!--
+          <i class="sm bi bi-suit-heart-fill"></i><!--
           --><span class="sm like mb-3"><%= post.followings.length %></span>
         <% end %>
       </p>
