Switch bi-person-plus-fill to bi-person-fill

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -31,7 +31,7 @@ label {
   vertical-align: super;
 }
 
-.bi-person-plus-fill {
+.bi-person-fill {
   color: $utakata-blue;
   vertical-align: super;
 }
