--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -41,6 +41,7 @@
       <ul class="ml">
         <li>アイコン（いいねのハート、通知のベルなど）を変更</li>
         <li>いいねが重複し得る問題を解消</li>
+        <li>投稿日時が空白で更新できてしまう問題を解消</li>
       </ul>
     </dd>
     <dt><time>2021/10/03</time></dt>
