--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,16 +1,16 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <div>
-    <%= link_to "新規にアカウント登録する", new_registration_path(resource_name) %><br />
+    <%= link_to "新規アカウント登録する", new_registration_path(resource_name) %><br />
   </div>
 <% end -%>
 <%- if controller_name != 'sessions' %>
   <div>
-    <%= link_to "登録済みのアカウントでログインする", new_session_path(resource_name) %><br />
+    <%= link_to "登録済みアカウントでログインする", new_session_path(resource_name) %><br />
   </div>
 <% end -%>
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <div>
-    <a href="../../about#mis-spelling">アカウント登録したのに確認用メールが届かない</a><br />    
+    <a href="../../about#mis-spelling">アカウント登録したのに確認用メールが届かない</a><br />
   </div>
 <% end -%>
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
