更新履歴を追加

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -42,6 +42,7 @@
         <li>アイコン（いいねのハート、通知のベルなど）を変更</li>
         <li>いいねが重複し得る問題を解消</li>
         <li>投稿日時が空白で更新できてしまう問題を解消</li>
+        <li>レイアウトを調整</li>
       </ul>
     </dd>
     <dt><time>2021/10/03</time></dt>
