--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -36,13 +36,19 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2021/11/01</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>フォームとラベルが対応していなかった問題を解消</li>
+      </ul>
+    </dd>
     <dt><time>2021/10/30</time></dt>
     <dd>
       <ul class="ml">
         <li>アイコン（いいねのハート、通知のベルなど）を変更</li>
         <li>いいねが重複し得る問題を解消</li>
         <li>投稿日時が空白で更新できてしまう問題を解消</li>
-        <li>レイアウトを調整</li>
+        <li>ログイン画面のリンクの文言を調整</li>
       </ul>
     </dd>
     <dt><time>2021/10/03</time></dt>
