--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,21 +22,21 @@
     <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab" data-controller="user">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <div class="field form-group mt-3">
-          <%= f.label :アイコン %><br />
+          <%= f.label :avatar %><br />
           <%= image_tag user.avatar.url, class: 'mb-2 rounded' %>
           <%= f.file_field :avatar, accept: 'image/*', 'data-action': 'change->user#submit' %><br />
           <%= f.label :avatar, 'ファイル選択', class: 'btn btn-sm btn-primary' %>
         </div>
         <div class="field form-group">
-          <%= f.label :ハンドルネーム %><br />
+          <%= f.label :name %>
           <%= f.text_field :name, autofocus: true, class: 'form-control' %>
         </div>
         <div class="field form-group">
-          <%= f.label :自己紹介 %><br />
+          <%= f.label :profile %>
           <%= f.text_area :profile, rows: 2, class: 'form-control' %>
         </div>
         <div class="field form-group">
-          <%= f.label :Twitterアカウント %><br />
+          <%= f.label :twitter_id %>
           <%= f.text_field :twitter_id, class: 'form-control' %>
           <small class="form-text text-muted">プロフィールにリンクを表示します。空欄の場合非表示となります。</small>
         </div>
@@ -49,7 +49,7 @@
     <div class="tab-pane fade" id="mail" role="tabpanel" aria-labelledby="mail-tab">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <div class="field form-group mt-3">
-          <%= f.label :email %><br />
+          <%= f.label :email %>
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
         </div>
 
@@ -61,11 +61,11 @@
     <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <div class="field form-group mx-auto  mt-3">
-          <%= f.label :パスワード（6文字以上） %><br />
+          <%= f.label :password, 'パスワード（6文字以上）' %>
           <%= f.password_field :password, class: 'form-control' %>
         </div>
         <div class="field form-group">
-          <%= f.label :パスワード（確認用） %><br />
+          <%= f.label :password_confirmation %>
           <%= f.password_field :password_confirmation, class: 'form-control' %>
         </div>
         <div class="form-group actions">
