--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,19 +13,19 @@
   <h5 class="mt-4 form-group">メールアドレスで登録する</h5>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <div class="field form-group">
-      <%= f.label :ハンドルネーム %><br />
+      <%= f.label :name %>
       <%= f.text_field :name, autofocus: true, class: 'form-control' %>
     </div>
     <div class="field form-group">
-      <%= f.label :メールアドレス %><br />
+      <%= f.label :email %>
       <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
     </div>
     <div class="field form-group">
-      <%= f.label :パスワード（6文字以上） %><br />
+      <%= f.label :password, 'パスワード（6文字以上）' %>
       <%= f.password_field :password, class: 'form-control' %>
     </div>
     <div class="field form-group">
-      <%= f.label :パスワード（確認用） %><br />
+      <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
     <div class="form-group actions">
