--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,13 +1,13 @@
 <% @title = 'アカウント登録用メール再送信' %>
 
 <div class="col-11 col-lg-5 mx-auto">
-  <h5 class="mt-4 mx-auto form-group col-11 col-lg-5">アカウント登録用メール再送信</h5>
+  <h5 class="mt-4 mx-auto mb-3 col-11 col-lg-5">アカウント登録用メール再送信</h5>
   <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-    <div class="field form-group">
+    <div class="mb-3">
       <%= f.label :email %>
       <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control' %>
     </div>
-    <div class="actions form-group">
+    <div class="mb-3">
       <%= f.submit "送信する", class: 'btn btn-primary' %>
     </div>
   <% end %>
