--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,13 +1,13 @@
 <% @title = 'パスワード再設定用メール送信' %>
 
 <div class="col-11 col-lg-5 mx-auto">
-  <h5 class="mt-4 form-group">パスワード再設定用メール送信</h5>
+  <h5 class="mt-4 mb-3">パスワード再設定用メール送信</h5>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <div class="field form-group">
+    <div class="mb-3">
       <%= f.label :email %>
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
     </div>
-    <div class="actions form-group">
+    <div class="mb-3">
       <%= f.submit "送信する", class: 'btn btn-primary' %>
     </div>
   <% end %>
