--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,33 +2,33 @@
 <% @description = 'Utakataのアカウント登録を行えます。' %>
 
 <div class="col-11 col-lg-5 mx-auto">
-  <h5 class="mt-4 form-group">Twitterアカウントで登録する</h5>
+  <h5 class="mt-4 mb-3">Twitterアカウントで登録する</h5>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <div class="form-group actions">
+    <div class="mb-3">
       <%= link_to omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary', method: :post do %>
         <i class="bi bi-twitter text-white"></i> 登録する
       <% end %>
     </div>
   <% end -%>
-  <h5 class="mt-4 form-group">メールアドレスで登録する</h5>
+  <h5 class="mt-4 mb-3">メールアドレスで登録する</h5>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <div class="field form-group">
+    <div class="mb-3">
       <%= f.label :name %>
       <%= f.text_field :name, autofocus: true, class: 'form-control' %>
     </div>
-    <div class="field form-group">
+    <div class="mb-3">
       <%= f.label :email %>
       <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
     </div>
-    <div class="field form-group">
+    <div class="mb-3">
       <%= f.label :password, 'パスワード（6文字以上）' %>
       <%= f.password_field :password, class: 'form-control' %>
     </div>
-    <div class="field form-group">
+    <div class="mb-3">
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
-    <div class="form-group actions">
+    <div class="mb-3">
       <%= f.submit "登録する", class: 'btn btn-primary' %>
     </div>
   <% end %>
