--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,11 +1,11 @@
 <% @title = 'アカウント登録用メール再送信' %>
 
 <div class="col-11 col-lg-5 mx-auto">
-  <h5 class="mt-4 mx-auto mb-3 col-11 col-lg-5">アカウント登録用メール再送信</h5>
+  <h5 class="mt-4 mb-3">アカウント登録用メール再送信</h5>
   <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-    <div class="mb-3">
+    <div class="form-floating mb-3">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control', placeholder: 'utakatanka@gmail.com' %>
       <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control' %>
     </div>
     <div class="mb-3">
       <%= f.submit "送信する", class: 'btn btn-primary' %>
