--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -4,13 +4,13 @@
   <h5 class="mt-4 mb-3">パスワード再設定</h5>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.hidden_field :reset_password_token %>
-    <div class="mb-3">
+    <div class="form-floating mb-3">
+      <%= f.password_field :password, autofocus: true, class: 'form-control', placeholder: 'password' %>
       <%= f.label :password, 'パスワード（6文字以上）' %>
-      <%= f.password_field :password, autofocus: true, class: 'form-control' %>
     </div>
-    <div class="mb-3">
+    <div class="form-floating mb-3">
+      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'password' %>
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
     <div class="mb-3">
       <%= f.submit "登録する", class: 'btn btn-primary' %>
