--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,9 +3,9 @@
 <div class="col-11 col-lg-5 mx-auto">
   <h5 class="mt-4 mb-3">パスワード再設定用メール送信</h5>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <div class="mb-3">
+    <div class="form-floating mb-3">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', placeholder: 'utakatanka@gmail.com' %>
       <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
     </div>
     <div class="mb-3">
       <%= f.submit "送信する", class: 'btn btn-primary' %>
