--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,21 +12,21 @@
   <% end -%>
   <h5 class="mt-4 mb-3">メールアドレスで登録する</h5>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <div class="mb-3">
+    <div class="form-floating mb-3">
+      <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: 'Utakata' %>
       <%= f.label :name %>
-      <%= f.text_field :name, autofocus: true, class: 'form-control' %>
     </div>
-    <div class="mb-3">
+    <div class="form-floating mb-3">
+      <%= f.email_field :email, autocomplete: "email", class: 'form-control', placeholder: 'utakatanka@gmail.com' %>
       <%= f.label :email %>
-      <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
     </div>
-    <div class="mb-3">
+    <div class="form-floating mb-3">
+      <%= f.password_field :password, class: 'form-control', placeholder: 'password' %>
       <%= f.label :password, 'パスワード（6文字以上）' %>
-      <%= f.password_field :password, class: 'form-control' %>
     </div>
-    <div class="mb-3">
+    <div class="form-floating mb-3">
+      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'password' %>
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
     <div class="mb-3">
       <%= f.submit "登録する", class: 'btn btn-primary' %>
