--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,7 +36,7 @@
           <%= f.label :profile %>
         </div>
         <div class="form-floating mb-3">
-          <%= f.text_field :twitter_id, class: 'form-control', placeholder: '@utakatanka' %>
+          <%= f.text_field :twitter_id, class: 'form-control', placeholder: 'utakatanka' %>
           <%= f.label :twitter_id %>
           <small class="form-text text-muted">プロフィールにリンクを表示します。空欄の場合非表示となります。</small>
         </div>
