--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
           <%= f.label :name %>
         </div>
         <div class="form-floating mb-3">
-          <%= f.text_area :profile, rows: 2, class: 'form-control', placeholder: 'プロフィール' %>
+          <%= f.text_area :profile, class: 'form-control h-6', placeholder: 'プロフィール' %>
           <%= f.label :profile %>
         </div>
         <div class="form-floating mb-3">
