設定画面の文言を調整

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,7 +38,7 @@
         <div class="form-floating mb-3">
           <%= f.text_field :twitter_id, class: 'form-control', placeholder: 'utakatanka' %>
           <%= f.label :twitter_id %>
-          <small class="form-text text-muted">プロフィールにリンクを表示します。空欄の場合非表示となります。</small>
+          <small class="form-text text-muted">マイページにリンクを表示します。空欄の場合非表示となります。</small>
         </div>
         <div class="mb-3">
           <%= f.submit "変更する", class: 'btn btn-primary', 'data-user-target': 'submit' %>
