--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -40,6 +40,7 @@
     <dd>
       <ul class="ml">
         <li>フォームとラベルのデザインを変更</li>
+        <li>設定画面の文言を調整</li>
       </ul>
     </dd>
     <dt><time>2021/11/01</time></dt>
